WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280151
[WPE] Assertion failure SSERTION FAILED: m_texture->refCount() == 2 in WebCore/platform/graphics/nicosia/NicosiaBuffer.cpp
https://bugs.webkit.org/show_bug.cgi?id=280151
Summary
[WPE] Assertion failure SSERTION FAILED: m_texture->refCount() == 2 in WebCo...
zsun
Reported
2024-09-22 07:58:55 PDT
STDERR: ASSERTION FAILED: m_texture->refCount() == 2 STDERR: /app/webkit/Source/WebCore/platform/graphics/nicosia/NicosiaBuffer.cpp(179) : virtual Nicosia::AcceleratedBuffer::~AcceleratedBuffer() STDERR: 1 0x7f7d12bf39eb Nicosia::AcceleratedBuffer::~AcceleratedBuffer() STDERR: 2 0x7f7d12bf3acc Nicosia::AcceleratedBuffer::~AcceleratedBuffer() STDERR: 3 0x7f7d0a829bdf WTF::ThreadSafeRefCounted<Nicosia::Buffer, (WTF::DestructionThread)0>::deref() const STDERR: 4 0x7f7d0a8243c1 WTF::DefaultRefDerefTraits<Nicosia::Buffer>::derefIfNotNull(Nicosia::Buffer*) STDERR: 5 0x7f7d0e04ca88 WTF::RefPtr<Nicosia::Buffer, WTF::RawPtrTraits<Nicosia::Buffer>, WTF::DefaultRefDerefTraits<Nicosia::Buffer> >::operator=(decltype(nullptr)) STDERR: 6 0x7f7d0e04b152 WebCore::CoordinatedBackingStoreTile::swapBuffers(WebCore::TextureMapper&) STDERR: 7 0x7f7d0e04c5a9 WebCore::CoordinatedBackingStore::commitTileOperations(WebCore::TextureMapper&) STDERR: 8 0x7f7d0a81c714 WebKit::CoordinatedGraphicsScene::updateSceneState() STDERR: 9 0x7f7d0a81a355 WebKit::CoordinatedGraphicsScene::paintToCurrentGLContext(WebCore::TransformationMatrix const&, WebCore::FloatRect const&, bool) STDERR: 10 0x7f7d0a83d5cd WebKit::ThreadedCompositor::renderLayerTree() STDERR: 11 0x7f7d0a83c1cf operator() STDERR: 12 0x7f7d0a84e466 call STDERR: 13 0x7f7d0a0f23bb WTF::Function<void ()>::operator()() const STDERR: 14 0x7f7d0a83a81e WebKit::CompositingRunLoop::updateTimerFired() STDERR: 15 0x7f7d0a84e71c void std::__invoke_impl<void, void (WebKit::CompositingRunLoop::*&)(), WebKit::CompositingRunLoop*&>(std::__invoke_memfun_deref, void (WebKit::CompositingRunLoop::*&)(), WebKit::CompositingRunLoop*&) STDERR: 16 0x7f7d0a84e695 std::__invoke_result<void (WebKit::CompositingRunLoop::*&)(), WebKit::CompositingRunLoop*&>::type std::__invoke<void (WebKit::CompositingRunLoop::*&)(), WebKit::CompositingRunLoop*&>(void (WebKit::CompositingRunLoop::*&)(), WebKit::CompositingRunLoop*&) STDERR: 17 0x7f7d0a84e60b void std::_Bind<void (WebKit::CompositingRunLoop::*(WebKit::CompositingRunLoop*))()>::__call<void, , 0ul>(std::tuple<>&&, std::_Index_tuple<0ul>) STDERR: 18 0x7f7d0a84e59d void std::_Bind<void (WebKit::CompositingRunLoop::*(WebKit::CompositingRunLoop*))()>::operator()<, void>() STDERR: 19 0x7f7d0a84e486 WTF::Detail::CallableWrapper<std::_Bind<void (WebKit::CompositingRunLoop::*(WebKit::CompositingRunLoop*))()>, void>::call() STDERR: 20 0x7f7d0a0f23bb WTF::Function<void ()>::operator()() const STDERR: 21 0x7f7d0a21cc8c WTF::RunLoop::Timer::fired() STDERR: 22 0x7f7d0de79099 operator() STDERR: 23 0x7f7d0de790d9 _FUN STDERR: 24 0x7f7d0de784db operator() STDERR: 25 0x7f7d0de78529 _FUN STDERR: 26 0x7f7cf9e7ed36 g_main_context_dispatch STDERR: 27 0x7f7cf9edc2b8 g_main_context_iterate.isra.0 STDERR: 28 0x7f7cf9e7e3ff g_main_loop_run STDERR: 29 0x7f7d0de78c40 WTF::RunLoop::run() STDERR: 30 0x7f7d0dcfdf1d operator() STDERR: 31 0x7f7d0dd00454 call STDERR: WPEWebProcess terminated (pid 98494) for reason: crash
Attachments
Add attachment
proposed patch, testcase, etc.
zsun
Comment 1
2024-09-22 07:59:20 PDT
Affected tests - fast/loader/navigate-with-post-to-new-target-after-back-forward-navigation.html imported/w3c/web-platform-tests/css/css-scroll-anchoring/image-001.html imported/w3c/web-platform-tests/html/semantics/embedded-content/the-img-element/image-loading-lazy-multicol.html storage/storagemanager/nested-dedicated-workers.html storage/indexeddb/mozilla/add-twice-failure-private.html
zsun
Comment 2
2024-09-24 02:05:17 PDT
Affected files to date - fast/dom/Document/early-document-access.html fast/dom/Window/new-window-opener.html fast/dom/Window/setting-properties-on-closed-window.html fast/frames/page-visibility-crash.html fast/parser/xhtml-document-with-html-object.xhtml http/tests/cookies/same-site/fetch-in-about-blank-page.html imported/w3c/web-platform-tests/content-security-policy/inheritance/window.html imported/w3c/web-platform-tests/fetch/metadata/generated/element-a.https.sub.html imported/w3c/web-platform-tests/fetch/metadata/generated/element-area.https.sub.html imported/w3c/web-platform-tests/fetch/metadata/generated/element-area.sub.html imported/w3c/web-platform-tests/fetch/metadata/generated/form-submission.sub.html imported/w3c/web-platform-tests/fetch/metadata/generated/window-location.https.sub.html imported/w3c/web-platform-tests/fetch/metadata/generated/window-location.sub.html imported/w3c/web-platform-tests/html/browsers/browsing-the-web/navigating-across-documents/navigate-to-unparseable-url.html imported/w3c/web-platform-tests/html/browsers/history/the-session-history-of-browsing-contexts/navigation-in-onload.html imported/w3c/web-platform-tests/html/browsers/the-window-object/BarProp.window.html imported/w3c/web-platform-tests/html/browsers/the-window-object/window-open-popup-behavior.html imported/w3c/web-platform-tests/html/browsers/the-window-object/window-open-windowfeatures-values.html imported/w3c/web-platform-tests/html/browsers/windows/browsing-context-names/choose-default-001.html imported/w3c/web-platform-tests/html/interaction/focus/the-autofocus-attribute/supported-elements.html imported/w3c/web-platform-tests/html/interaction/focus/the-autofocus-attribute/supported-elements.html imported/w3c/web-platform-tests/html/semantics/embedded-content/the-iframe-element/iframe_sandbox_popups_escaping-1.html imported/w3c/web-platform-tests/html/semantics/links/links-created-by-a-and-area-elements/htmlanchorelement_noopener.html imported/w3c/web-platform-tests/html/webappapis/dynamic-markup-insertion/opening-the-input-stream/document.open-02.html imported/w3c/web-platform-tests/page-visibility/unload-bubbles.html imported/w3c/web-platform-tests/page-visibility/unload.html imported/w3c/web-platform-tests/secure-contexts/basic-popup-and-iframe-tests.html imported/w3c/web-platform-tests/service-workers/service-worker/navigation-sets-cookie.https.html imported/w3c/web-platform-tests/service-workers/service-worker/navigation-sets-cookie.https.html imported/w3c/web-platform-tests/svg/struct/scripted/autofocus-attribute.svg imported/w3c/web-platform-tests/trusted-types/trusted-types-navigation.html imported/w3c/web-platform-tests/upgrade-insecure-requests/gen/sharedworker-module.http-rp/upgrade/fetch.https.html imported/w3c/web-platform-tests/webvtt/rendering/cues-with-video/processing-model/selectors/cue_function/background_box.html media/media-source/media-detachablemse-append.html storage/indexeddb/modern/blob-cursor.html storage/indexeddb/modern/blob-svg-image.html
zsun
Comment 3
2024-09-25 02:01:30 PDT
https://github.com/WebKit/WebKit/pull/34219
EWS
Comment 4
2024-09-25 06:20:31 PDT
Committed
284217@main
(90058110a246): <
https://commits.webkit.org/284217@main
> Reviewed commits have been landed. Closing PR #34219 and removing active labels.
EWS
Comment 5
2024-09-26 02:23:29 PDT
Committed
284272@main
(8a8c05962db4): <
https://commits.webkit.org/284272@main
> Reviewed commits have been landed. Closing PR #34226 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug