Remove incorrect assertion in Nicosia::AcceleratedBuffer::~AcceleratedBuffer(). https://bugs.webkit.org/show_bug.cgi?id=280151

Reviewed by Nikolas Zimmermann.

This assertion is not correct. m_texture->refCount() can be other values such as 1.

* Source/WebCore/platform/graphics/nicosia/NicosiaBuffer.cpp:
(Nicosia::AcceleratedBuffer::~AcceleratedBuffer):

Canonical link: https://commits.webkit.org/284217@main