Source/WebCore/platform/graphics/nicosia/NicosiaBuffer.cpp
@@ -179,8 +179,6 @@ AcceleratedBuffer::~AcceleratedBuffer()
     // Owned by us, and the BitmapTexturePool from which it is allocated.
     // If we could potentially destruct the BitmapTexture here, we'd have to
     // assure this happens on the main thread - but we don't have to.
-    ASSERT(m_texture->refCount() == 2);
-
     ensureOnMainThread([fence = WTFMove(m_fence)]() mutable {
         PlatformDisplay::sharedDisplay().skiaGLContext()->makeContextCurrent();
         fence = nullptr;
